--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>example</title>
+  </head>
+    <body>
+      <h1>Johanna</h1>
+      <p>I live in Kerava</p>
+      <ol>
+        <li>college</li>
+        <li>university</li>
+      </ol>
+      <ul>
+        <li>german</li>
+        <li>english</li>
+        <li>swedish</li>
+      </ul>
+      <div>something</div>
+    </body>
+</html>
